--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -14,7 +14,7 @@ body{
     font-family: 'Open Sans', sans-serif;
     height: 100%;
 }
-.container{
+.container1{
     display: grid;
     grid-template-columns: 250px 1fr 300px;
     min-height: 100vh;
@@ -69,17 +69,7 @@ body{
     font-size: 25px;
     background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
 }
-.your-address{
-    border: 1px solid #32be8f81;
-    color: #32be8f;
-    padding: 5px 10px;
-    border-radius: 5px;
-    width: 150px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    cursor: pointer;
-}
+
 .add-box i{
     font-size: 20px;
 }
@@ -112,65 +102,14 @@ body{
     color: white;
     background: #32be8f;
 }
-#biryani,#paneer,#chicken,#vegetable,#chinese,#south-indian{
-    margin-top: 40px;
-}
-#paneer #item-card,#vegetable #item-card{
-    background: rgb(221, 243, 243);
-}
-#chinese #item-card,#south-indian #item-card{
-    background: rgb(221, 243, 243);
-}
+
 #category-name,.item-menu{
     margin: 10px;
     font-size: 35px;
     color: #32be8f;
     font-family: 'Aclonica', sans-serif;
 }
-#item-card{
-    width: 180px;
-    height: 200px;
-    padding: 10px;
-    margin: 10px;
-    display: inline-block;
-    border-radius: 5px;
-    background: rgb(221, 243, 243);
-    cursor: pointer;
-    transition: 0.5s all step-end;
-}
-#item-card:hover img{
-    transform: scale(1.1);
-}
-#card-top{
-    display: flex;
-    margin: 5px 0;
-    justify-content: space-between;
-}
-#item-card img{
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    margin: auto;
-    display: block;
-    margin-bottom: 15px;
-    transition: 0.5s all ease-in-out;
-}
-#item-name{
-    margin: 5px 0;
-    font-weight: 600;
-    color: darkslategray;
-    font-size: 18px;
-}
-#item-price{
-    margin: 0;
-    color: rgb(2, 27, 27);
-    font-weight: 500;
-    font-size: 18px;
-}
 
-.food-items{
-    display: none;
-}
 #cart{
     background: white;
     padding-right: 30px;
@@ -223,6 +162,4 @@ body{
     top: 0;
     background: whitesmoke;
 }
-#biryani{
-    margin-top: 10px;
-}
+
